web-infras/parser/tests/fixtures/babel/core/scope/dupl-bind-catch-func/output.txt
[SyntaxError]: Identifier has already been declared. (3,3)
3|  function foo() {}
 | ^
